fixed CSS margins for better alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,13 @@ body {
 }
 .container {
   display: block;
-  margin: 60px 50px 60px;
+  margin: 0 379px;
   max-width: 700px;
 }
 .card {
   display: block;
-
+  margin: 0 auto;
+  margin-top: 90px;
   padding: 30px;
   border: #ccc 1px solid;
 }
